fix image overflow in modal

--- a/src/SelectedMap.css
+++ b/src/SelectedMap.css
@@ -3,8 +3,15 @@
   height: 90vh;
 }
 
+.modal-body {
+  box-sizing: border-box;
+  height: 100%;
+  overflow: hidden;
+}
+
 .modal-body img {
   width: 100%;
-  height: 75vh;
+  max-height: 100%;
+  overflow: hidden;
   object-fit: cover;
 }
